--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.assertj:assertj-core:3.0.0'
 }
